--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vue Tour is a lightweight, simple and customizable tour plugin for use with Vue.js. It provides a quick and easy way to guide your users through your application.",
   "author": "Pulsar <pulsar.dev.team@gmail.com>",
   "license": "MIT",
-  "main": "dist/vue-tour.common.js",
+  "main": "dist/vue-tour.umd.min.js",
   "module": "dist/vue-tour.umd.js",
   "repository": {
     "type": "git",
